[package]
name = "invemanage"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv_codegen = "0.15.0"
futures = "0.3.30"
mongodb = { version="3.0.1", features=[] }
rocket = { version="0.5.1", features=["http2", "json", "secrets"] }
serde = { version="1.0.204", features=["std", "derive"] }
tokio = { version="1.38.1", features=["full"] }
